# chichvirus-game-contract

./: README.md  package-lock.json  package.json
contract/: .gitignore  Cargo.toml  deploy.sh  reset_test_account.sh
contract/src/: game_match.rs  lib.rs
